[project]
name = "ledge"
version = "0.1"
description = "A double entry accounting system in python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
]
lint = [
  "mypy",
  "pre-commit"
]
test = [
  "pytest"
]


[tool.ruff.lint]
# "D" to enable pydocstyle rules
extend-select = ["D"]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/__init__.py" = ["D"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
