[project]
name = "ledge"
version = "0.1"
description = "A double entry accounting system in python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "util"},
]
lint = [
  "mypy",
  "pre-commit"
]
test = [
  "pytest"
]
util = [
    "custom-inherit>=2.4.1",
]


[tool.ruff.lint]
# "D" to enable pydocstyle rules
extend-select = ["D"]
# don't require docstrings for modules
ignore = ["D100"]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/__init__.py" = ["D"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
