[project]
name = "ledge"
version = "0.1"
description = "A double entry accounting system in python"
readme = "README.md"
requires-python = ">=3.10" # could target earlier but 3.9 is EOL
license = "GPL-3.0-or-later"
authors = [
    {name = "chase horton", email = "chasehortonj@gmail.com"},
]
license-files = ["LICENSE*"]
dependencies = [
    "psycopg2>=2.9.10",
]

[dependency-groups]
cli = [
    "prompt-toolkit>=3.0.52",
    "typer>=0.21.0",
]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "util"},
]
lint = [
  "mypy>=1.14.1",
  "pre-commit>=3.5.0",
  "types-psycopg2>=2.9.21.20241019",
]
test = [
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.1",
]
util = [
  "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# "D" to enable pydocstyle rules
extend-select = ["D"]
# don't require docstrings for modules
ignore = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["ledge.utils.doc_inherit"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/__init__.py" = ["D"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: mark test as requiring a PostgreSQL integration database"
]
[tool.coverage.run]
source = ["src"]
# currently just a tool for testing
omit = ["src/ledge/cli/*"]

[project.scripts]
ledge = "ledge.cli:app"
